Issue #76 Issue #72 Issue #71